Added ISystemInformation service

--- a/src/Brainf_ckSharp.Services.Uwp/Brainf_ckSharp.Services.Uwp.csproj
+++ b/src/Brainf_ckSharp.Services.Uwp/Brainf_ckSharp.Services.Uwp.csproj
@@ -133,6 +133,7 @@
     <Compile Include="ShareService.cs" />
     <Compile Include="Store\ProductionStoreService.cs" />
     <Compile Include="Store\TestStoreService.cs" />
+    <Compile Include="SystemInformationService.cs" />
     <EmbeddedResource Include="Properties\Brainf_ckSharp.Services.Uwp.rd.xml" />
   </ItemGroup>
   <ItemGroup>
