Minor code refactoring

--- a/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
+++ b/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
@@ -121,6 +121,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="App.Main.cs" />
     <Compile Include="AttachedProperties\Brainf_ckInlineFormatterHelper.StackTrace.cs" />
     <Compile Include="AttachedProperties\CharacterRotationHelper.cs" />
     <Compile Include="AttachedProperties\IdeResultSectionDescriptionHelper.cs" />
