--- a/src/Brainf_ckSharp.Services.Uwp/Brainf_ckSharp.Services.Uwp.csproj
+++ b/src/Brainf_ckSharp.Services.Uwp/Brainf_ckSharp.Services.Uwp.csproj
@@ -146,14 +146,11 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.10</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Toolkit">
-      <Version>6.1.0-preview1.2</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.HighPerformance">
-      <Version>6.1.0-preview1.2</Version>
+      <Version>6.1.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp">
-      <Version>6.1.0-rc1</Version>
+      <Version>6.1.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
