--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,6 @@ bld/
 [Oo]bj/
 [Ll]og/
 
-# Microsoft.Toolkit preview packages
-src/Microsoft.Toolkit.*
-
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
@@ -168,6 +165,9 @@ PublishScripts/
 # NuGet v3's project.json files produces more ignoreable files
 *.nuget.props
 *.nuget.targets
+
+# Preview packages
+!packages-local/*.nupkg
 
 # Microsoft Azure Build Output
 csx/
