--- a/src/Brainf_ckSharp.Shared/Brainf_ckSharp.Shared.csproj
+++ b/src/Brainf_ckSharp.Shared/Brainf_ckSharp.Shared.csproj
@@ -13,6 +13,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit" Version="6.1.0" />
+    <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.0.0-build.99.ge68de8fb31" />
     <PackageReference Include="Nito.AsyncEx" Version="5.0.0" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
@@ -21,7 +22,6 @@
     <ProjectReference Include="..\Brainf_ckSharp.Services\Brainf_ckSharp.Services.csproj" />
     <ProjectReference Include="..\Brainf_ckSharp\Brainf_ckSharp.csproj" />
     <ProjectReference Include="..\GitHub\GitHub.csproj" />
-    <ProjectReference Include="..\Microsoft.Toolkit.Mvvm\Microsoft.Toolkit.Mvvm.csproj" />
   </ItemGroup>
 
   <Import Project="..\Brainf_ckSharp.Shared.Constants\Brainf_ckSharp.Shared.Constants.projitems" Label="Shared" />
