--- a/src/Brainf_ckSharp/Brainf_ckSharp.csproj
+++ b/src/Brainf_ckSharp/Brainf_ckSharp.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Toolkit" Version="6.1.0" />
-    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="6.1.0" />
+    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.0.0-build.96.g23f56f3fc9" />
   </ItemGroup>
 
   <ItemGroup>
