--- a/src/Brainf_ckSharp.Shared/Brainf_ckSharp.Shared.csproj
+++ b/src/Brainf_ckSharp.Shared/Brainf_ckSharp.Shared.csproj
@@ -12,6 +12,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.6" />
     <PackageReference Include="Microsoft.Toolkit" Version="6.1.0" />
     <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.0.0-build.149.gac0e18877c" />
     <PackageReference Include="Nito.AsyncEx" Version="5.0.0" />
