--- a/nuget.config
+++ b/nuget.config
@@ -2,5 +2,6 @@
 <configuration>
   <packageSources>
     <add key="Local" value="packages-local"/>
+    <add key="MyGet" value="https://dotnet.myget.org/F/uwpcommunitytoolkit/api/v3/index.json" protocolVersion="3" />
   </packageSources>
 </configuration>
