--- a/src/Brainf_ckSharp.Git/Brainf_ckSharp.Git.csproj
+++ b/src/Brainf_ckSharp.Git/Brainf_ckSharp.Git.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Experimental.Collections" Version="1.0.6-e190117-3" />
-    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.0.0-build.96.g23f56f3fc9" />
+    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.0.0-build.173.gfb29007caa" />
   </ItemGroup>
 
 </Project>
