--- a/src/Brainf_ckSharp.Shared/Brainf_ckSharp.Shared.csproj
+++ b/src/Brainf_ckSharp.Shared/Brainf_ckSharp.Shared.csproj
@@ -14,7 +14,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.6" />
     <PackageReference Include="Microsoft.Toolkit" Version="7.0.0-build.194" />
-    <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.0.0-build.149.gac0e18877c" />
+    <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.0.0-build.195.gf30716bdb5" />
     <PackageReference Include="Nito.AsyncEx" Version="5.0.0" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
