Refactored benchmark code

--- a/profiling/Brainf_ckSharp.Profiler/Brainf_ckSharp.Profiler.csproj
+++ b/profiling/Brainf_ckSharp.Profiler/Brainf_ckSharp.Profiler.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp3.1;netcoreapp2.1</TargetFrameworks>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
