--- a/src/Brainf_ckSharp.Uwp.Themes/Brainf_ckSharp.Uwp.Themes.csproj
+++ b/src/Brainf_ckSharp.Uwp.Themes/Brainf_ckSharp.Uwp.Themes.csproj
@@ -134,7 +134,7 @@
       <Version>6.2.10</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp">
-      <Version>6.1.1</Version>
+      <Version>7.0.0-preview3</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
