--- a/src/Brainf_ckSharp/Brainf_ckSharp.csproj
+++ b/src/Brainf_ckSharp/Brainf_ckSharp.csproj
@@ -9,8 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Toolkit" Version="7.0.0-build.227" />
-    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.0.0-build.173.gfb29007caa" />
+    <PackageReference Include="Microsoft.Toolkit" Version="7.0.0-preview3" />
+    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.0.0-preview3" />
   </ItemGroup>
 
   <ItemGroup>
