Added highlight for selected memory cell

--- a/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
+++ b/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Controls\Windows.UI.Xaml.Controls\ComboBoxWithNoScrollWheelSupport.cs" />
     <Compile Include="Converters\BoolConverter.cs" />
     <Compile Include="Converters\Console\ExitCodeConverter.cs" />
+    <Compile Include="Converters\Ide\BoolToForegroundBrushConverter.cs" />
     <Compile Include="Converters\Ide\CodeSnippetTitleConverter.cs" />
     <Compile Include="Converters\LocalizationConverter.cs" />
     <Compile Include="Converters\SubPages\SettingsSectionConverters.cs" />
