Updated all NuGet dependencies

--- a/src/Brainf_ckSharp.Git/Brainf_ckSharp.Git.csproj
+++ b/src/Brainf_ckSharp.Git/Brainf_ckSharp.Git.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Experimental.Collections" Version="1.0.6-e190117-3" />
-    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.0.0-preview3" />
+    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
