--- a/unit/Brainf_ckSharp.Unit.Internals/Brainf_ckSharp.Unit.Internals.csproj
+++ b/unit/Brainf_ckSharp.Unit.Internals/Brainf_ckSharp.Unit.Internals.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.1;netcoreapp3.1</TargetFrameworks>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Brainf_ckSharp.Unit.Internals</RootNamespace>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
