--- a/src/Brainf_ckSharp.Services.Uwp/Brainf_ckSharp.Services.Uwp.csproj
+++ b/src/Brainf_ckSharp.Services.Uwp/Brainf_ckSharp.Services.Uwp.csproj
@@ -147,8 +147,8 @@
     <PackageReference Include="Microsoft.Toolkit">
       <Version>7.0.1</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Toolkit.Diagnostics">
-      <Version>7.0.1</Version>
+    <PackageReference Include="CommunityToolkit.Diagnostics">
+      <Version>8.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.HighPerformance">
       <Version>7.0.1</Version>
