--- a/src/Brainf_ckSharp.Git/Brainf_ckSharp.Git.csproj
+++ b/src/Brainf_ckSharp.Git/Brainf_ckSharp.Git.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.0.0" />
     <PackageReference Include="Microsoft.Experimental.Collections" Version="1.0.6-e190117-3" />
-    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.0.1" />
   </ItemGroup>
 
 </Project>
