--- a/unit/Brainf_ckSharp.Git.Unit/Brainf_ckSharp.Git.Unit.csproj
+++ b/unit/Brainf_ckSharp.Git.Unit/Brainf_ckSharp.Git.Unit.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>net472;net6.0;net7.0</TargetFrameworks>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
