Switch JSON serializaton to source generators

--- a/src/Brainf_ckSharp.Services.Uwp/Brainf_ckSharp.Services.Uwp.csproj
+++ b/src/Brainf_ckSharp.Services.Uwp/Brainf_ckSharp.Services.Uwp.csproj
@@ -136,10 +136,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Diagnostics">
-      <Version>8.0.0</Version>
+      <Version>8.1.0-preview3</Version>
     </PackageReference>
     <PackageReference Include="CommunityToolkit.HighPerformance">
-      <Version>8.0.0</Version>
+      <Version>8.1.0-preview3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Analytics">
       <Version>5.0.1</Version>
