--- a/unit/Brainf_ckSharp.Unit.Internals/Brainf_ckSharp.Unit.Internals.csproj
+++ b/unit/Brainf_ckSharp.Unit.Internals/Brainf_ckSharp.Unit.Internals.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net472;net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>net472;net8.0</TargetFrameworks>
     <RootNamespace>Brainf_ckSharp.Unit.Internals</RootNamespace>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
