--- a/src/Brainf_ckSharp.Services.Uwp/Brainf_ckSharp.Services.Uwp.csproj
+++ b/src/Brainf_ckSharp.Services.Uwp/Brainf_ckSharp.Services.Uwp.csproj
@@ -120,7 +120,7 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Analytics\AppCenterService.cs" />
+    <Compile Include="Analytics\ReleaseAnalyticsService.cs" />
     <Compile Include="Analytics\TestAnalyticsService.cs" />
     <Compile Include="ClipboardService.cs" />
     <Compile Include="Abstractions\File.cs" />
@@ -140,12 +140,6 @@
     </PackageReference>
     <PackageReference Include="CommunityToolkit.HighPerformance">
       <Version>8.2.2</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.AppCenter.Analytics">
-      <Version>5.0.1</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.AppCenter.Crashes">
-      <Version>5.0.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.14</Version>
